fix: change calendly order and fix text visibility

--- a/styles.css
+++ b/styles.css
@@ -316,6 +316,10 @@ main {
   color: var(--color-text-light);
 }
 
+.text-more-visible {
+  text-shadow: 0 0px 1px rgb(0 0 0);
+}
+
 .text-muted {
   color: var(--color-text-muted);
 }
